tests/semantic/valid/76_i9_method_infer_return.hulk
type C {
    double(x) => x + x;
}
let c = new C() in print(c.double(1));
