tests/semantic/invalid/70_g_for_no_next.hulk
type MyIter() {
    current() => 1;
}

for (x in new MyIter()) print(x + 1);
